--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^9.0.0",
+    "kue": "^0.11.6",
     "mongoose": "^5.4.6",
     "multer": "^1.4.1",
+    "nodemailer": "^6.9.2",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.1",
